[package]
name = "set4"
version = "0.0.1"

[lib]
name = "set4"
path = "lib.rs"

[dependencies.set1]
path = "../set1"

[dependencies.set2]
path = "../set2"

[dependencies.set3]
path = "../set3"

[dependencies.sha1]
path = "./rust-sha1"

[dependencies]
byteorder = "0.3"
curl = "0.2"
rand = "0.3"
rust-crypto = "=0.2.34"
time = "0.1"
tiny_http = "0.5"
