[package]
name = "set6"
version = "0.0.1"

[lib]
name = "set6"
path = "lib.rs"

# Necessary, otherwise challenge 43 takes forever
[profile.test]
opt-level = 3

[dependencies.set1]
path = "../set1"

[dependencies.set5]
path = "../set5"

[dependencies.ramp]
git = "https://github.com/Aatch/ramp.git"

[dependencies]
rand = "0.3"
